Add documentation for login route
